--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,23 +1,11 @@
-$color: #00cc99;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import "reset";
+@import "basing";
+@import "variable";
+@import "layout";
+@import "./index";
+@import "utility";
 
-.header {
-  height: 200px;
-  background-color: #00cc99;
-}
 
-.footer {
-  height: 200px;
-  background-color: #00cc99;
-}
 
-.box {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  display: flex;
-  transition: all 0.5s;
-  &:hover {
-    width: 200px;
-    background-color: $color;
-  }
-}
+
