--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -91,7 +91,6 @@
     background: url("../images/index-bg.png") center/cover no-repeat;
 }
 .co-branding-item{
-    p{
         background: #fff;
         color: $primary;
         font-weight: 900;
@@ -99,7 +98,6 @@
         padding: 8px;
         font-family: Roboto;
         font-style: italic;
-    }
 }
 
 
@@ -115,14 +113,15 @@
 }
 
 .customer{
-   width: calc(25% - 24px);
+   width: 25%;
    display: flex;
    flex-direction: column;
-    box-shadow: 0px 2px 6px #00000029;
-    
+   box-shadow: 0px 2px 6px #00000029;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
 }
 .customer-card{
-    padding: 4px;
+    padding: 1rem;
     height: 205px;
     display: flex;
     flex-direction: column;
@@ -137,12 +136,12 @@
 }
 @media screen and (max-width:992px) {
     .customer{
-        width: calc(50% - 24px);;
+        width: 50%;
     }
 }
 @media screen and (max-width:767px) {
     .customer{
-        width: calc(100% - 24px);
+        width: 100%;
     }
 }
 
